# llmpy-models

./: enums.py  main.py  models.ipynb  openai.ipynb  openai_models.csv  pyproject.toml  requirements.txt
scripts/: models.ipynb
src/llmpy_models/: llmpy-models.py
