[project]
name = "llmpy-models"
version = "0.0.1"
description = "Automatically  LLM models for llmpy-lib"
readme = "README.md"
authors = [
    { name = "Angelo Zangari", email = "angelo.zangari10@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
